
  * patches/0002-Fix-a-regression-with-non-constexpr-types.patch:
  * patches/ec60c37295146bb80aa44a92cf416027b75b5ff7.patch:
  * patches/numeric-ublas-storage.hpp.patch:
  * patches/openssl-no-ssl3.patch: Remove.  Applied upstream.

  * patches/mpi-allocator-c++0x.patch: Drop gcc-4.x patch since gcc 4 not
    supported.

  * rules: Don't filter out the python 2.7 version when building
    user-config.jam.

 -- Steve M. Robbins <smr@debian.org>  Sun, 28 Feb 2016 23:18:58 -0600

boost1.58 (1.58.0+dfsg-5) unstable; urgency=medium

  * Build Coroutine shared lib.  Closes: #802509.
  * patches/no-gcc-march-options.patch: New.  Don't use -march=i686 for
    x86 32-bit.  Closes: #794622.

 -- Steve M. Robbins <smr@debian.org>  Mon, 28 Dec 2015 00:19:48 -0600

boost1.58 (1.58.0+dfsg-4.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Add patch to replace minified jquery with its non-minified version, as the
  * source was missing. (Closes: #735353)

 -- Tobias Frost <tobi@debian.org>  Sat, 21 Nov 2015 14:24:59 +0100

boost1.58 (1.58.0+dfsg-4) unstable; urgency=medium

  * Team upload.
  * patches/openssl-no-ssl3.patch. Throw exception if sslv3 context
    requested but OPENSSL_NO_SSL3 defined (Closes: #803881).

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 04 Nov 2015 11:41:19 +0100

boost1.58 (1.58.0+dfsg-3.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Fix FTBFS of ompl against boost1.58 by gcc5. (Closes: #797281)

 -- Anton Gladky <gladk@debian.org>  Sat, 03 Oct 2015 19:58:02 +0200

boost1.58 (1.58.0+dfsg-3) unstable; urgency=medium

  * Upload to unstable.

 -- Dimitri John Ledkov <dimitri.j.ledkov@linux.intel.com>  Sun, 02 Aug 2015 17:31:54 +0100

boost1.58 (1.58.0+dfsg-2) experimental; urgency=medium

  [ Dimitri John Ledkov ]
  * Cherry-pick upstream patch to fix FTBFS on sparc.

  [ Matthias Klose ]
  * boost-context-use-sysv-not-aapcs.patch: Fix build on AArch64 (Ed Nevill).
